# brace_top_setup

./: .pre-commit-config.yaml  CMakeLists.txt  package.xml
cmake/: brace_top_setup_INSTALL_PREFIX.cmake
convex/: Link1-ch.txt  Link2-ch.txt  base_link-ch.txt
launch/: display.launch  gazebo.launch
meshes/: Link1.STL  Link2.STL  base_link.STL
urdf/: brace_top_setup.csv  brace_top_setup.urdf
utils/: generate_convexes.sh
